tests/rosetta/out/Java/15-puzzle-solver.error
javac error: exit status 1
/tmp/TestMochiToJava15-puzzle-solver600424488/001/15PuzzleSolver.java:8: error: <identifier> expected
public class 15PuzzleSolver {
            ^
1 error
