tests/rosetta/out/Java/15-puzzle-solver.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:29:51Z
// 15-puzzle-solver.mochi
class testpkg {
    static int Add(int a, int b) { return a + b; }
    static double Pi = 3.14;
    static int Answer = 42;
}
public class 15PuzzleSolver {
    public static void main(String[] args) {
    System.out.println(testpkg.FifteenPuzzleExample());
    }
}
